<resources>
    <string name="app_name">SteamApp</string>
    <string name="select_options">SELECCIONE UNA OPCION</string>
    <string name="btn_crear">crear cuenta</string>
    <string name="btn_buscar">buscar usuario</string>
    <string name="btn_update">actualizar datos</string>
    <string name="btn_delete">eliminar cuenta</string>
    <string name="new_account">CUENTA NUEVA</string>
    <string name="tv_name">Nombres:</string>
    <string name="tv_ap">Apellido Paterno:</string>
    <string name="tv_am">Apellido Materno:</string>
    <string name="usuario">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="correo">Correo electrónico:</string>
    <string name="sexo">Sexo:</string>
    <string name="edad">Edad:</string>
    <string name="btn_guardar">guardar</string>
</resources>
