<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCAAA4">

    <TextView android:text="@string/select_options"
        android:padding="5dp"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <Button android:id="@+id/btn_crear"
        android:layout_above="@+id/btn_update"
        android:text="@string/btn_crear"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="#757575"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        />

    <Button android:id="@+id/btn_update"
        android:text="@string/btn_update"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="#757575"
        android:padding="5dp"/>

    <Button android:id="@+id/btn_buscar"
        android:text="@string/btn_buscar"
        android:layout_below="@+id/btn_update"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="#757575"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>

    <Button android:id="@+id/btn_delete"
        android:text="@string/btn_delete"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="#757575"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>



</RelativeLayout>
